# nexora-platform

./: .editorconfig  .env.dev  .env.production.example  .env.smoke  .env.test  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG_KEYCLOAK_CROSSPLANE.md  CHANGELOG_OPENSTACK_MYSQL.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  TODO_LIST.md  docker-compose.dev.yml  docker-compose.smoke.yml  docker-compose.test.yml  pyproject.toml
.github/: dependabot.yml
docs/: CONVENTIONAL_COMMITS.md  DEVELOPMENT_SETUP.md  GITHUB_PUSH.md  IDE_SETUP.md  MULTI_ARCH_SUPPORT.md  OPENSTACK_COMPATIBILITY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  REPOSITORY_SETUP.md  REPRODUCIBILITY.md  TESTING.md  TESTING_SUMMARY.md  compliance-controls.yaml  error-budget-policy.yaml  finops-cost-model.yaml  research-status-report.md  zero-downtime-migrations.yaml
infrastructure/: README.md
libraries/common/: README.md  pyproject.toml
libraries/common/src/common/: __init__.py  api_versioning.py  audit.py  config.py  internal_auth.py  tenancy.py
libraries/common/src/common/auth/: __init__.py  context.py  oidc.py  policy_engine.py
libraries/common/src/common/cache/: __init__.py  cache.py  strategy.py
libraries/common/src/common/config/: __init__.py  settings.py
libraries/common/src/common/database/: __init__.py  database.py  service_db.py
libraries/common/src/common/errors/: __init__.py  exceptions.py
libraries/common/src/common/events/: __init__.py  contracts.py  dlq.py  event_bus.py  idempotency.py  outbox.py
libraries/common/src/common/health/: __init__.py  health_checker.py
libraries/common/src/common/logging/: __init__.py  logging.py
libraries/common/src/common/metrics/: __init__.py  metrics.py
libraries/common/src/common/openstack/: __init__.py  glance_cinder_adapter.py  keystone_adapter.py  neutron_adapter.py  nova_adapter.py
libraries/common/tests/: test_auth_context.py  test_internal_auth.py
libraries/sdk/: CHANGELOG.json  README.md  build-docs.sh  mkdocs.yml  pyproject.toml
libraries/sdk/docs/: conf.py  index.md
libraries/sdk/docs/api/: README.md
libraries/sdk/docs/examples/: auth.md  basic.md
libraries/sdk/docs/grpc/: README.md
libraries/sdk/src/sdk/: __init__.py
libraries/sdk/src/sdk/api/: __init__.py  client.py
libraries/sdk/src/sdk/grpc/: __init__.py  client.py
libraries/sdk/src/sdk/types/: __init__.py
scripts/: backup-restore-validate.sh  chaos-drill.sh  contract-tests-api.py  demo-reliability-gate.sh  deploy-iotronic-ui-adapter.sh  deploy-vm.sh  dev-compose.sh  dr-gameday.sh  event-replay.py  git-hooks-setup.sh  git-setup.sh  gtm-baseline-kpi.py  install-agent.sh  install-deps.sh  integration-cross-service.sh  load-profile-catalog.sh  local-smoke.sh  lr-emulator-e2e.sh  nexora-device-emulator-e2e.sh  perf-baseline.sh  perf-dispatch-latency.sh  perf-dispatch-roundtrip.py  perf-eval.py  perf-scalability.py  perf-wasm-runtime.py  postalpha-validation.sh  test-all.sh  (+10 more)
services/ai-pipeline-service/: Dockerfile  pyproject.toml
services/ai-pipeline-service/src/ai_pipeline_service/: __init__.py  main.py
services/ai-pipeline-service/src/ai_pipeline_service/api/: __init__.py  functions.py  insights.py  query.py  risk.py
services/ai-pipeline-service/src/ai_pipeline_service/core/: __init__.py  analyzer.py  config.py  database.py  enrichment.py  events.py  function_builder.py  jsonutil.py  llm.py  metrics.py  risk.py
services/ai-pipeline-service/src/ai_pipeline_service/models/: __init__.py  insight.py
services/ai-pipeline-service/tests/: test_insights.py
services/device-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/device-service/alembic/: env.py
services/device-service/alembic/versions/: 001_initial_device_schema.py  002_add_ownership_to_devices.py  003_create_device_discoveries.py  004_create_device_consents.py  005_create_ownership_events.py  006_add_capabilities_to_devices.py  007_add_runtime_env_to_devices.py  008_add_matter_fields.py
services/device-service/k8s/: deployment.yaml
services/device-service/src/device_service/: main.py
services/device-service/src/device_service/api/: devices.py  discovery.py  privacy.py  schemas.py  shadow.py  slo.py  telemetry.py
services/device-service/src/device_service/core/: auth.py  config.py  database.py  events.py  metrics.py  rate_limit.py  tracing.py
services/device-service/src/device_service/models/: __init__.py  device.py  device_consent.py  device_discovery.py  device_shadow.py  device_slo.py  device_telemetry.py  ownership_event.py
services/device-service/src/device_service/services/: device_service.py
services/device-service/tests/: conftest.py  test_api.py  test_discovery_privacy.py  test_telemetry_slo.py
services/dns-service/: alembic.ini  main.py  pyproject.toml
services/dns-service/alembic/versions/: 001_initial_dns_schema.py  002_add_dns_ttl.py
services/dns-service/k8s/: deployment.yaml
services/dns-service/src/dns_service/core/: config.py  database.py  events.py
services/dns-service/src/dns_service/models/: dns_record.py
services/dns-service/tests/: conftest.py  test_api.py  test_dns.py
services/lightningrod-gateway/: Dockerfile  main.py  pyproject.toml
services/lightningrod-gateway/src/lightningrod_gateway/core/: config.py  metrics.py  tracing.py
services/matter-bridge/: Dockerfile  main.py  pyproject.toml
services/matter-bridge/src/matter_bridge/core/: attribute_watcher.py  command_handler.py  commission.py  config.py
services/matter-bridge/tests/: conftest.py  test_commission.py
services/mqtt-bridge/: Dockerfile  main.py  pyproject.toml
services/mqtt-bridge/src/mqtt_bridge/core/: command_publisher.py  config.py  device_registry.py  message_handler.py
services/mqtt-bridge/tests/: conftest.py  test_message_handler.py
services/zigbee-bridge/: Dockerfile  main.py  pyproject.toml
services/zigbee-bridge/src/zigbee_bridge/core/: command_handler.py  config.py  device_registry.py  message_handler.py
services/zigbee-bridge/tests/: test_message_handler.py
(+384 files in other folders)
