[tool.poetry]
name = "nxr-common"
version = "0.1.0"
description = "Common utilities library for Nxr v2.0"
authors = ["Nxr Team"]
readme = "README.md"
packages = [{include = "common", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
aiomysql = "^0.2.0"
pymysql = "^1.1.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
aiokafka = "^0.10.0"
nats-py = {version = "^2.6.0", optional = true}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
fastapi = "^0.109.0"
jwt = "^1.4.0"
pyjwt = "^2.10.1"

[tool.poetry.extras]
nats = ["nats-py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

