[tool.poetry]
name = "ai-pipeline-service"
version = "0.1.0"
description = "Nexora AI operations insights service"
authors = ["Nexora Team"]
packages = [{include = "ai_pipeline_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
cryptography = "^41.0.7"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiokafka = "^0.10.0"
httpx = "^0.25.2"
prometheus-client = "^0.19.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
