[tool.poetry]
name = "matter-bridge"
version = "0.1.0"
description = "Nexora Matter protocol bridge — commissions and manages Matter devices"
authors = ["Nexora Platform"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
httpx = "^0.26.0"
aiokafka = "^0.12.0"
aiohttp = "^3.9.1"
prometheus-client = "^0.19.0"
# Optional: uncomment when targeting real Matter hardware
# python-matter-server = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
