[tool.poetry]
name = "mqtt-bridge"
version = "0.1.0"
description = "Nexora MQTT protocol bridge — connects MQTT devices to the Nexora platform"
authors = ["Nexora Platform"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
httpx = "^0.26.0"
aiomqtt = "^1.2.1"
aiokafka = "^0.12.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
